# MacroLens

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
configs/: indicators.yaml  model_weights.yaml  narrative_topics.yaml  portfolio_rules.yaml  tickers.yaml
scripts/: run_backtest.py  run_daily_update.py  run_dashboard.py  run_simulation.py
src/macro_quant/: __init__.py  pipeline.py
src/macro_quant/backtesting/: backtest_engine.py  metrics.py  strategies.py
src/macro_quant/dashboard/: app.py
src/macro_quant/data/: fixtures.py  macro_data.py  market_data.py  news_data.py  storage.py
src/macro_quant/features/: fragility_features.py  macro_features.py  narrative_features.py  technical_features.py
src/macro_quant/models/: __init__.py  asset_score_model.py  portfolio_model.py  regime_model.py  simulation_model.py
src/macro_quant/reporting/: charts.py  daily_report.py  weekly_report.py
src/macro_quant/utils/: __init__.py  config.py  math_utils.py
tests/: test_config.py  test_features_models.py  test_market_data.py  test_pipeline_backtest_simulation.py  test_storage.py
