[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macrolens"
version = "0.1.0"
description = "MacroLens / 宏观透镜: an offline-first macro market quant research platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "duckdb>=0.10",
  "feedparser>=6.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.20",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "streamlit>=1.33",
  "tabulate>=0.9",
  "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
